--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <nav class="menu-nav">
         <ul class="barra-nav">
-            <li><a href="#">Información personal</a></li>
-            <li><a href="#h2">Experiencia Laboral</a></li>
-            <li><a href="#h3">Formación Acamdémica</a></li>
-            <li><a href="#h4">Habilidades</a></li>
+            <li><a href="#" id="ocultar">Información personal</a></li>
+            <li><a href="#h2" id="ocultar">Experiencia Laboral</a></li>
+            <li><a href="#h3" id="ocultar">Formación Acamdémica</a></li>
+            <li><a href="#h4" id="ocultar">Habilidades</a></li>
         </ul>
             <button class="boton-menu">Menú</button>
     </nav>
